[tool.poetry]
name = "blogapi"
version = "0.1.0"
description = ""
authors = ["lucas <lucas6eng@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
sqlalchemy = "^2.0.23"


[tool.poetry.group.dev.dependencies]
nox = "^2023.4.22"
nox-poetry = "^1.0.3"
flake8 = "^6.1.0"
mypy = "^1.7.1"
pytest = "^7.4.3"

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
